Configure train arrival time, platform transfer time

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,1 +1,32 @@
-trainArrivalMinutes=3
+trainArrivalMinutes {
+  mrt=3
+  lrt=3
+}
+platformTransferMinutes {
+  TampinesDtl_Ewl=4
+  ExpoDtl_Ewl=4
+  PayaLebarCcl_Ewl=4
+  BugisDtl_Ewl=4
+  CityHallNsl_Ewl=4
+  RafflesPlaceNsl_Ewl=4
+  OutramParkNel_Ewl=4
+  BuonaVistaCcl_Ewl=4
+  JurongEastNsl_Ewl=4
+  NewtonDtl_Nsl=4
+  DhobyGhautCcl_Nel=4
+  DhobyGhautCcl_Nsl=4
+  DhobyGhautNel_Nsl=4
+  MarinaBayCcl_Nsl=4
+  HarbourFrontCcl_Nel=4
+  ChinatownDtl_Nel=4
+  LittleIndiaDtl_Nel=4
+  SerangoonCcl_Nel=4
+  BayfrontDtl_Ccl=4
+  PromenadeDtl_Ccl=4
+  MacPhersonDtl_Ccl=4
+  BotanicGardensDtl_Ccl=4
+  SengkangNel_Lrt=4
+  PunggolNel_Lrt=4
+  ChoaChuKangNsl_Lrt=4
+  BukitPanjangDtl_Lrt=4
+}
